--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');         
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');    
 .camera{
     max-width: 1000px;
     margin: auto;
     padding: 20px;
     background-color: #efefef;
 }
-
 .app{
     width: 100%;
     position: relative;
@@ -297,10 +297,8 @@
                     height: auto;
                     padding: 100px 0;
                     text-align: center;
-                    color: white;
-                    background: url(../images/mood.jpg) no-repeat bottom center scroll;
-                    background-color: rgba(63, 0, 39, -103.5);
-                    -webkit-background-size: cover;
+                    background: url(../images/background.svg) no-repeat bottom center scroll; 
+                      -webkit-background-size: cover;
                     -moz-background-size: cover;
                     background-size: cover;
                     -o-background-size: cover;
