--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,13 +156,13 @@
     }
 }
 
-                body {
+body {
                     width: 100%;
                     height: 100%;
                     font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
-                    color: white;
-                    background-color:black;
-                }
+                    color: black;
+                    background-color:#DDDDDD;
+}
 
                 html {
                     width: 100%;
@@ -297,8 +297,9 @@
                     height: auto;
                     padding: 100px 0;
                     text-align: center;
-                    background: url(../images/background.svg) no-repeat bottom center scroll; 
-                      -webkit-background-size: cover;
+                    background-color: #0074D9; 
+                    background: url(../images/background.svg) rgb(10, 150, 50) no-repeat bottom center; 
+                   -webkit-background-size: cover;
                     -moz-background-size: cover;
                     background-size: cover;
                     -o-background-size: cover;
